--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ a {
 a:hover,
 a:active,
 a:focus {
-    color: #007bff;
+    color: #B5DEFF;
     outline: none;
     text-decoration: none;
 }
@@ -41,7 +41,7 @@ a:focus {
 .back-to-top {
     position: fixed;
     display: none;
-    background: #007bff;
+    background: #B5DEFF;
     width: 44px;
     height: 44px;
     text-align: center;
@@ -58,7 +58,7 @@ a:focus {
 }
 
 .back-to-top:hover i {
-    color: #007bff;
+    color: #B5DEFF;
 }
 
 .back-to-top i {
@@ -273,7 +273,7 @@ a:focus {
     width: 100%;
     margin-bottom: 45px;
     padding: 90px 0;
-    background: #007bff;
+    background: #B5DEFF;
     overflow: hidden;
 }
 
@@ -318,7 +318,7 @@ a:focus {
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 1px;
-    color: #007bff;
+    color: #B5DEFF;
     background: #343148;
     border-radius: 0;
     transition: .3s;
@@ -396,7 +396,7 @@ a:focus {
     margin-bottom: 45px;
     padding: 150px 0 90px 0;
     text-align: center;
-    background: #007bff;
+    background: #B5DEFF;
 }
 
 .page-header h2 {
@@ -471,7 +471,7 @@ a:focus {
     top: 11px;
     right: -30px;
     left: -30px;
-    background: #007bff;
+    background: #B5DEFF;
     z-index: -1;
 }
 
@@ -526,7 +526,7 @@ a:focus {
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 1px;
-    color:#007bff;
+    color:#B5DEFF;
     background: #343148;
     border-radius: 0;
     transition: .3s;
@@ -534,7 +534,7 @@ a:focus {
 
 .about .about-text a.btn:hover {
     color: #343148;
-    background: #007bff;
+    background: #B5DEFF;
 }
 
 @media (max-width: 767.98px) {
@@ -598,7 +598,7 @@ a:focus {
     display: block;
     width: 80px;
     height: 80px;
-    background: #007bff;
+    background: #B5DEFF;
     border-radius: 50%;
     animation: pulse-border 2000ms ease-out infinite;
 }
@@ -613,7 +613,7 @@ a:focus {
     display: block;
     width: 80px;
     height: 80px;
-    background: #007bff;
+    background: #B5DEFF;
     border-radius: 50%;
     transition: all 200ms;
 }
@@ -638,7 +638,7 @@ a:focus {
 
 .service .service-item:hover h3,
 .service .service-item.active h3 {
-    color: #007bff;
+    color: #B5DEFF;
 }
 
 .service .service-item p {
@@ -681,7 +681,7 @@ a:focus {
 .class #class-filter li:hover,
 .class #class-filter li.filter-active {
     background: #343148;
-    color: #007bff;
+    color: #B5DEFF;
 }
 
 .class .class-item {
@@ -737,7 +737,7 @@ a:focus {
     width: 40px;
     height: 40px;
     border-radius: 40px;
-    background: #007bff;
+    background: #B5DEFF;
 }
 
 .class .class-teacher h3 {
@@ -759,13 +759,13 @@ a:focus {
     font-size: 30px;
     font-weight: 100;
     color: #343148;
-    background: #007bff;
+    background: #B5DEFF;
     border-radius: 40px;
     transition: .3s;
 }
 
 .class .class-wrap:hover .class-teacher a {
-    color: #007bff;
+    color: #B5DEFF;
     background: #343148;
 }
 
@@ -839,7 +839,7 @@ a:focus {
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 1px;
-    color: #007bff;
+    color: #B5DEFF;
     background: #343148;
     border-radius: 0;
     transition: .3s;
@@ -877,13 +877,13 @@ a:focus {
 
 .price .price-header {
     padding: 30px;
-    background: #007bff;
+    background: #B5DEFF;
     color: #343148;
 }
 
 .price .price-item.featured-item .price-header {
     background: #343148;
-    color: #007bff;
+    color: #B5DEFF;
 }
 
 .price .price-status {
@@ -901,7 +901,7 @@ a:focus {
     color: #343148;
     font-size: 14px;
     line-height: 14px;
-    background: #007bff;
+    background: #B5DEFF;
 }
 
 .price .price-title h2 {
@@ -931,7 +931,7 @@ a:focus {
 }
 
 .price .price-item.featured-item h2 {
-    color: #007bff;
+    color: #B5DEFF;
 }
 
 .price .price-body {
@@ -968,19 +968,19 @@ a:focus {
     font-weight: 600;
     letter-spacing: 1px;
     border-radius: 0;
-    background: #007bff;
+    background: #B5DEFF;
     transition: .3s;
 }
 
 .price .price-action a:hover,
 .price .price-item.featured-item .price-action a {
-    color: #007bff;
+    color: #B5DEFF;
     background: #343148;
 }
 
 .price .price-item.featured-item .price-action a:hover {
     color: #343148;
-    background: #007bff;
+    background: #B5DEFF;
 }
 
 
@@ -1034,14 +1034,14 @@ a:focus {
     justify-content: center;
     border-radius: 40px;
     font-size: 16px;
-    color: #007bff;
+    color: #B5DEFF;
     background: #343148;
     opacity: 0;
 }
 
 .team .team-social a:hover {
     color: #343148;
-    background: #007bff;
+    background: #B5DEFF;
 }
 
 
@@ -1159,7 +1159,7 @@ a:focus {
 }
 
 .testimonial .owl-item.center .testimonial-text h3 {
-    color: #007bff;
+    color: #B5DEFF;
 }
 
 .testimonial .owl-item.center .testimonial-text p,
@@ -1178,7 +1178,7 @@ a:focus {
     width: 12px;
     height: 12px;
     border-radius: 50%;
-    background: #007bff;
+    background: #B5DEFF;
 }
 
 .testimonial .owl-dot.active {
@@ -1251,7 +1251,7 @@ a:focus {
 }
 
 .blog .blog-item a.btn:hover {
-    color: #007bff;
+    color: #B5DEFF;
 }
 
 .blog .blog-meta {
@@ -1287,7 +1287,7 @@ a:focus {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #007bff;
+    color: #B5DEFF;
     background: #343148;
     font-size: 22px;
     transition: .3s;
@@ -1296,7 +1296,7 @@ a:focus {
 .blog .owl-nav .owl-prev:hover,
 .blog .owl-nav .owl-next:hover {
     color: #343148;
-    background: #007bff;
+    background: #B5DEFF;
 }
 
 .blog .pagination .page-link {
@@ -1307,7 +1307,7 @@ a:focus {
 
 .blog .pagination .page-link:hover,
 .blog .pagination .page-item.active .page-link {
-    color: #007bff;
+    color: #B5DEFF;
     background: #343148;
 }
 
@@ -1349,7 +1349,7 @@ a:focus {
 .portfolio #portfolio-filter li:hover,
 .portfolio #portfolio-filter li.filter-active {
     background: #343148;
-    color: #007bff;
+    color: #B5DEFF;
 }
 
 .portfolio .portfolio-item {
@@ -1403,7 +1403,7 @@ a:focus {
     font-size: 25px;
     color: #343148;
     margin-bottom: 15px;
-    border: 1px solid #007bff;
+    border: 1px solid #B5DEFF;
     border-radius: 50px;
 }
 
@@ -1435,7 +1435,7 @@ a:focus {
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 1px;
-    color: #007bff;
+    color: #B5DEFF;
     background: #343148;
     border-radius: 0;
     transition: .3s;
@@ -1443,7 +1443,7 @@ a:focus {
 
 .contact .contact-form .btn:hover {
     color: #343148;
-    background: #007bff;
+    background: #B5DEFF;
 }
 
 .contact .help-block ul {
@@ -1489,7 +1489,7 @@ a:focus {
 }
 
 .single .single-tags a:hover {
-    color:#007bff;
+    color:#B5DEFF;
     background: #343148;
 }
 
@@ -1604,14 +1604,14 @@ a:focus {
     align-items: center;
     justify-content: center;
     color: #343148;
-    background: #007bff;
+    background: #B5DEFF;
     font-size: 16px;
     transition: .3s;
 }
 
 .single .related-slider .owl-nav .owl-prev:hover,
 .single .related-slider .owl-nav .owl-next:hover {
-    color: #007bff;
+    color: #B5DEFF;
     background: #343148;
 }
 
@@ -1675,7 +1675,7 @@ a:focus {
 }
 
 .single .comment-text .btn:hover {
-    background: #007bff;
+    background: #B5DEFF;
 }
 
 .single .comment-form {
@@ -1704,13 +1704,13 @@ a:focus {
 
 .single .comment-form .btn {
     padding: 15px 30px;
-    color: #007bff;
+    color: #B5DEFF;
     background: #343148;
 }
 
 .single .comment-form .btn:hover {
     color: #343148;
-    background: #007bff;
+    background: #B5DEFF;
 }
 
 
@@ -1748,7 +1748,7 @@ a:focus {
     height: 2px;
     bottom: 0;
     left: 0;
-    background: #007bff;
+    background: #B5DEFF;
 }
 
 .sidebar .sidebar-widget .search-widget {
@@ -1772,7 +1772,7 @@ a:focus {
     height: 40px;
     padding: 0;
     font-size: 25px;
-    color: #007bff;
+    color: #B5DEFF;
     background: none;
     border-radius: 0;
     border: none;
@@ -1792,7 +1792,7 @@ a:focus {
 }
 
 .sidebar .tab-post .nav.nav-pills .nav-link {
-    color: #007bff;
+    color: #B5DEFF;
     background: #343148;
     border-radius: 0;
 }
@@ -1800,7 +1800,7 @@ a:focus {
 .sidebar .tab-post .nav.nav-pills .nav-link:hover,
 .sidebar .tab-post .nav.nav-pills .nav-link.active {
     color: #343148;
-    background: #007bff;
+    background: #B5DEFF;
 }
 
 .sidebar .tab-post .tab-content {
@@ -1840,7 +1840,7 @@ a:focus {
     content: '\f105';
     font-family: 'Font Awesome 5 Free';
     font-weight: 900;
-    color: #007bff;
+    color: #B5DEFF;
     left: 1px;
 }
 
@@ -1865,7 +1865,7 @@ a:focus {
 }
 
 .single .tag-widget a:hover {
-    color: #007bff;
+    color: #B5DEFF;
     background: #343148;
 }
 
@@ -1911,7 +1911,7 @@ a:focus {
 
 .footer .footer-info .footer-logo {
     display: inline-block;
-    color:#007bff;
+    color:#B5DEFF;
     font-size: 60px;
     line-height: 60px;
     font-weight: 700;
@@ -1972,7 +1972,7 @@ a:focus {
 }
 
 .footer .footer-social a:hover i {
-    color: #007bff;
+    color: #B5DEFF;
 }
 
 .footer .copyright {
@@ -2001,7 +2001,7 @@ a:focus {
 }
 
 .footer .copyright p a:hover {
-    color: #007bff;
+    color: #B5DEFF;
 }
 
 @media (max-width: 767.98px) {
